[package]
name = "gui-test"
version = "0.1.0"
authors = ["Gilson Doi Junior <doijunior@yahoo.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }